--- a/HomePage.Master
+++ b/HomePage.Master
@@ -40,20 +40,27 @@
     <form id="form1" runat="server">
         <div class="col-lg-12">
             <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <img src="images/bnrCollage.jpg" width="100%" height="100px"/>
-                    </div>
-                 <!-- /.panel-heading -->
+                    
+                <!-- /.panel-heading -->
                     <div class="panel-body">
                         
                         <asp:Button ID="btnTransactions" runat="server" Width="200px" Text="Transactions" class="btn btn-outline btn-default" />
                         
                     </div>
+                <div class="panel-heading">
+                    <h1>Bienvenue a ITH Infrastructure Technologique des Hopitaux</h1>
+                        <img  src="images/ITH.jpg" width="1300" height="200" />
+                    
+                    </div>
                 </div>
             </div>
+        
         <div>
+             
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                
             </asp:ContentPlaceHolder>
+            
         </div>
     </form>
 </body>
